MDEV-22633 Assertion failed in prepare_inplace_alter_table_dict

prepare_inplace_alter_table_dict(): In the error handling, relax
a debug assertion for the case that we did not execute
dict_stats_wait_bg_to_stop_using_table() yet.